example/experiment.g4
grammar experiment;

program : programHeading (INTERFACE)? block DOT ;

programHeading : PROGRAM identifier (LPAREN identifierList RPAREN)? SEMICOLON | UNIT identifier SEMICOLON | PROGRAM identifier SEMICOLON ;

identifier : IDENT ;

block : (labelDeclarationPart | constantDefinitionPart | typeDefinitionPart | variableDeclarationPart | procedureAndFunctionDeclarationPart | usesUnitsPart | IMPLEMENTATION)* compoundStatement ;

usesUnitsPart : USES identifierList SEMICOLON ;

labelDeclarationPart : LABEL label (COMMA label)* SEMICOLON ;

label : unsignedInteger ;

constantDefinitionPart : CONST (constantDefinition SEMICOLON) + ;

constantDefinition : identifier EQUAL constant ;

constantChr : CHR LPAREN unsignedInteger RPAREN ;

constant : unsignedNumber | sign unsignedNumber | identifier | sign identifier | string | constantChr ;

unsignedNumber : unsignedInteger | unsignedReal ;

unsignedInteger : NUM_INT ;

unsignedReal : NUM_REAL ;

sign : PLUS | MINUS ;

bool_ : TRUE | FALSE ;

string : STRING_LITERAL ;

typeDefinitionPart : TYPE (typeDefinition SEMICOLON) + ;

typeDefinition : identifier EQUAL (type_ | functionType | procedureType) ;

functionType : FUNCTION (formalParameterList)? COLON resultType ;

procedureType : PROCEDURE (formalParameterList)? ;

type_ : simpleType | structuredType | pointerType ;

simpleType : scalarType | subrangeType | typeIdentifier | stringtype ;

scalarType : LPAREN identifierList RPAREN ;

subrangeType : constant DOTDOT constant ;

typeIdentifier : identifier | (CHAR | BOOLEAN | INTEGER | REAL | STRING) ;

structuredType : PACKED unpackedStructuredType | unpackedStructuredType ;

unpackedStructuredType : arrayType | recordType | setType | fileType ;

stringtype : STRING LBRACK (identifier | unsignedNumber) RBRACK ;

arrayType : ARRAY LBRACK typeList RBRACK OF componentType | ARRAY LBRACK2 typeList RBRACK2 OF componentType ;

typeList : indexType (COMMA indexType)* ;

indexType : simpleType ;

componentType : type_ ;

recordType : RECORD fieldList? END ;

fieldList : fixedPart (SEMICOLON variantPart)? | variantPart ;

fixedPart : recordSection (SEMICOLON recordSection)* ;

recordSection : identifierList COLON type_ ;

variantPart : CASE tag OF variant (SEMICOLON variant)* ;

tag : identifier COLON typeIdentifier | typeIdentifier ;

variant : constList COLON LPAREN fieldList RPAREN ;

setType : SET OF baseType ;

baseType : simpleType ;

fileType : FILE OF type_ | FILE ;

pointerType : POINTER typeIdentifier ;

variableDeclarationPart : VAR variableDeclaration (SEMICOLON variableDeclaration)* SEMICOLON ;

variableDeclaration : identifierList COLON type_ ;

procedureAndFunctionDeclarationPart : procedureOrFunctionDeclaration SEMICOLON ;

procedureOrFunctionDeclaration : procedureDeclaration | functionDeclaration ;

procedureDeclaration : PROCEDURE identifier (formalParameterList)? SEMICOLON block ;

formalParameterList : LPAREN formalParameterSection (SEMICOLON formalParameterSection)* RPAREN ;

formalParameterSection : parameterGroup | VAR parameterGroup | FUNCTION parameterGroup | PROCEDURE parameterGroup ;

parameterGroup : identifierList COLON typeIdentifier ;

identifierList : identifier (COMMA identifier)* ;

constList : constant (COMMA constant)* ;

functionDeclaration : FUNCTION identifier (formalParameterList)? COLON resultType SEMICOLON block ;

resultType : typeIdentifier ;

statement : label COLON unlabelledStatement | unlabelledStatement ;

unlabelledStatement : simpleStatement | structuredStatement ;

simpleStatement : assignmentStatement | procedureStatement | gotoStatement | emptyStatement_ ;

assignmentStatement : variable ASSIGN expression ;

variable : (AT identifier | identifier) (LBRACK expression (COMMA expression)* RBRACK | LBRACK2 expression (COMMA expression)* RBRACK2 | DOT identifier | POINTER)* ;

expression : simpleExpression (relationaloperator expression)? ;

relationaloperator : EQUAL | NOT_EQUAL | LT | LE | GE | GT | IN ;

simpleExpression : term (additiveoperator simpleExpression)? ;

additiveoperator : PLUS | MINUS | OR ;

term : signedFactor (multiplicativeoperator term)? ;

multiplicativeoperator : STAR | SLASH | DIV | MOD | AND ;

signedFactor : (PLUS | MINUS)? factor ;

factor : variable | LPAREN expression RPAREN | functionDesignator | unsignedConstant | set_ | NOT factor | bool_ ;

unsignedConstant : unsignedNumber | constantChr | string | NIL ;

functionDesignator : identifier LPAREN parameterList RPAREN ;

parameterList : actualParameter (COMMA actualParameter)* ;

set_ : LBRACK elementList RBRACK | LBRACK2 elementList RBRACK2 ;

elementList : element (COMMA element)* | ;

element : expression (DOTDOT expression)? ;

procedureStatement : identifier (LPAREN parameterList RPAREN)? ;

actualParameter : expression parameterwidth* ;

parameterwidth : ':' expression ;

gotoStatement : GOTO label ;

emptyStatement_ : ;

empty_ : /* empty */ ;

structuredStatement : compoundStatement | conditionalStatement | repetetiveStatement | withStatement ;

compoundStatement : BEGIN statements END ;

statements : statement (SEMICOLON statement)* ;

conditionalStatement : ifStatement | caseStatement ;

ifStatement : IF expression THEN statement (: ELSE statement)? ;

caseStatement : CASE expression OF caseListElement (SEMICOLON caseListElement)* (SEMICOLON ELSE statements)? END ;

caseListElement : constList COLON statement ;

repetetiveStatement : whileStatement | repeatStatement | forStatement ;

whileStatement : WHILE expression DO statement ;

repeatStatement : REPEAT statements UNTIL expression ;

forStatement : FOR identifier ASSIGN forList DO statement ;

forList : initialValue (TO | DOWNTO) finalValue ;

initialValue : expression ;

finalValue : expression ;

withStatement : WITH recordVariableList DO statement ;

recordVariableList : variable (COMMA variable)* ;

fragment A : ('a' | 'A') ;
fragment B : ('b' | 'B') ;
fragment C : ('c' | 'C') ;
fragment D : ('d' | 'D') ;
fragment E : ('e' | 'E') ;
fragment F : ('f' | 'F') ;
fragment G : ('g' | 'G') ;
fragment H : ('h' | 'H') ;
fragment I : ('i' | 'I') ;
fragment J : ('j' | 'J') ;
fragment K : ('k' | 'K') ;
fragment L : ('l' | 'L') ;
fragment M : ('m' | 'M') ;
fragment N : ('n' | 'N') ;
fragment O : ('o' | 'O') ;
fragment P : ('p' | 'P') ;
fragment Q : ('q' | 'Q') ;
fragment R : ('r' | 'R') ;
fragment S : ('s' | 'S') ;
fragment T : ('t' | 'T') ;
fragment U : ('u' | 'U') ;
fragment V : ('v' | 'V') ;
fragment W : ('w' | 'W') ;
fragment X : ('x' | 'X') ;
fragment Y : ('y' | 'Y') ;
fragment Z : ('z' | 'Z') ;

AND : A N D ;

ARRAY : A R R A Y ;

BEGIN : B E G I N ;

BOOLEAN : B O O L E A N ;

CASE : C A S E ;

CHAR : C H A R ;

CHR : C H R ;

CONST : C O N S T ;

DIV : D I V ;

DO : D O  ;

DOWNTO : D O W N T O ;

ELSE : E L S E ;

END : E N D;

FILE : F I L E ;

FOR : F O R ;

FUNCTION : F U N C T I O N ;

GOTO : G O T O ;

IF : I F ;

IN : I N ;

INTEGER : I N T E G E R ;

LABEL : L A B E L ;

MOD : M O D ;

NIL : N I L ;

NOT : N O T ;

OF : O F ;

OR : O R ;

PACKED : P A C K E D ;

PROCEDURE : P R O C E D U R E ;

PROGRAM : P R O G R A M ;

REAL : R E A L ;

RECORD : R E C O R D ;

REPEAT : R E P E A T ;

SET : S E T ;

THEN : T H E N ;

TO : T O ;

TYPE : T Y P E ;

UNTIL : U N T I L ;

VAR : V A R ;

WHILE : W H I L E ;

WITH : W I T H ;

PLUS : '+' ;

MINUS : '-' ;

STAR : '*' ;

SLASH : '/' ;

ASSIGN : ':' '=' ;

COMMA : ',' ;

SEMICOLON : ';' ;

COLON : ':' ;

EQUAL : '=' ;

NOT_EQUAL : '<>' ;

LT : '<' ;

LE : '<=' ;

GE : '>=' ;

GT : '>' ;

LPAREN : '(' ;

RPAREN : ')' ;

LBRACK : '[' ;

LBRACK2 : '(.' ;

RBRACK : ']' ;

RBRACK2 : '.)' ;

POINTER : '^' ;

AT : '@' ;

DOT : '.' ;

DOTDOT : '..' ;

LCURLY : '{' ;

RCURLY : '}' ;

UNIT : U N I T ;

INTERFACE : I N T E R F A C E ;

USES : U S E S ;

STRING : S T R I N G ;

IMPLEMENTATION : I M P L E M E N T A T I O N ;

TRUE : T R U E ;

FALSE : F A L S E ;

WS : [ \t\r\n] -> skip ;

COMMENT_1 : '(*' .*? '*)' -> skip ;

COMMENT_2 : '{' .*? '}' -> skip ;

IDENT : ('a' .. 'z' | 'A' .. 'Z') ('a' .. 'z' | 'A' .. 'Z' | '0' .. '9' | '_')* ;

STRING_LITERAL : '\'' ('\'\'' | ~ ('\''))* '\'' ;

NUM_INT : ('0' .. '9') + ;

NUM_REAL : ('0' .. '9') + (('.' ('0' .. '9') + (EXPONENT)?)? | EXPONENT) ;

fragment EXPONENT : ('e') ('+' | '-')? ('0' .. '9') + ;
